# FedditAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python_ci.yml
app/: endpoints.py  main.py  sentiment_analysis.py
app/core/: config.py  constants.py
config/: config.yaml
tests/: test_config.py  test_feddit_api.py  test_main.py  test_sent_analysis.py
