[tool.poetry]
name = "fedditapi"
version = "0.1.0"
description = "API for Subfeddit sentiment analysis."
authors = ["IoanaBaciu24 <ioana.iris@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]
package-mode = false  # keep this since you're not publishing

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
nltk = ">=3.9.1,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
pyyaml = ">=6.0.2,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
